chapter8/svcnodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grace
  namespace: gracehttp
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30123
  selector:
    app: grace 
  externalIPs:
    - 192.168.160.6
    - 192.168.160.5
    - 192.168.160.4
